--- a/locales/ja/tp41.html
+++ b/locales/ja/tp41.html
@@ -16,28 +16,28 @@
                 <li>
                     IN/OUT設定<br>
                     ・<code>act</code>: io<br>
-                    ・<code>line</code>: 0 - 7<br>
-                    ・<code>v</code>: 1:出力, 0:入力
+                    ・<code>gp</code>: 0 - 7<br>
+                    ・<code>v</code>: 1:OUT, 0:IN
                 </li>
                 <li>
                     Pullup設定(入力のみ)<br>
                     ・<code>act</code>: pup<br>
-                    ・<code>line</code>: 0 - 7<br>
+                    ・<code>gp</code>: 0 - 7<br>
                     ・<code>v</code>: 1:有効, 0:無効
                 </li>
                 <li>
                     出力状態をセット<br>
                     ・<code>act</code>: set<br>
-                    ・<code>line</code>: 0 - 7<br>
+                    ・<code>gp</code>: 0 - 7<br>
                     ・<code>v</code>: 1:HIGH, 0:LOW
                 </li>
                 <li>
                     状態を取得<br>
                     ・<code>act</code>: get<br>
-                    ・<code>line</code>: 0 - 7<br>
+                    ・<code>gp</code>: 0 - 7<br>
                 </li>      
             </ul>
-            <p>e.g.</p><pre>[{act: 'io', line: 1, v: 1}, {act: 'pup', line: 1, v: 1}, {act: 'set', line: 1, v: 1}, {act: 'get', line: 1}]</pre>
+            <p>e.g.</p><pre>[{act: 'io', gp: 1, v: 1}, {act: 'pup', gp: 1, v: 1}, {act: 'set', gp: 1, v: 1}, {act: 'get', gp: 1}]</pre>
         </dd>
     </dl>
     <h3>Outputs</h3>
