ver1.1.0 ・TPbit #01ノード追加 ・各ノードのヘルプの参照先をTibbo-Piサイトへ変更 ・内部通信動作安定化 ・GPIO瞬時パルス入力修正

--- a/locales/ja/tp00.html
+++ b/locales/ja/tp00.html
@@ -5,15 +5,15 @@
 
     <p>#00_1 4chダイレクトI/O</p>
     <p>スロットの4本の信号線を直接外部に接続したI/O用のブロック。</p>
-    <p>参照:<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2300_1">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_direct_io/#spec">SPEC Sheet</a></p>
     
     <p>#00_2 3chダイレクトI/O+GND</p>
     <p>スロットの3本の信号線を直接外部に接続し、外部信号の1本はGNDに接続したI/O用のブロック。</p>
-    <p>参照:<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2300_2">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_direct_io_gnd/#spec">SPEC Sheet</a></p>
 
     <p>#00_3 2chダイレクトI/O+5V+GND</p>
     <p>スロットの2本の信号線を直接外部に接続し、外部信号の1本はGNDに接続、1本に5V出力したI/O用のブロック。</p>
-    <p>参照:<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2300_3">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_direct_io_5vgnd/#spec">SPEC Sheet</a></p>
 
     <h3>GPIO</h3>
     <b>Inputs</b>
@@ -181,15 +181,15 @@
 
     <p>#00_1 4chダイレクトI/O</p>
     <p>スロットの4本の信号線を直接外部に接続したI/O用のブロック。</p>
-    <p>参照:<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2300_1">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_direct_io/#spec">SPEC Sheet</a></p>
     
     <p>#00_2 3chダイレクトI/O+GND</p>
     <p>スロットの3本の信号線を直接外部に接続し、外部信号の1本はGNDに接続したI/O用のブロック。</p>
-    <p>参照:<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2300_2">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_direct_io_gnd/#spec">SPEC Sheet</a></p>
 
     <p>#00_3 2chダイレクトI/O+5V+GND</p>
     <p>スロットの2本の信号線を直接外部に接続し、外部信号の1本はGNDに接続、1本に5V出力したI/O用のブロック。</p>
-    <p>参照:<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2300_3">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_direct_io_5vgnd/#spec">SPEC Sheet</a></p>
 
     <h3>GPIO</h3>
     <b>Outputs</b>
