--- a/locales/ja/tp02.html
+++ b/locales/ja/tp02.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>RS232/422/485のレベル変換ブロック</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2302">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/rs232_422_485_multi_transceiver/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
@@ -48,7 +48,7 @@
 
     <h3>Details</h3>
     <p>RS232/422/485のレベル変換ブロック</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2302">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/rs232_422_485_multi_transceiver/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <ol class="node-ports">
