--- a/locales/ja/tp03.html
+++ b/locales/ja/tp03.html
@@ -4,11 +4,11 @@
     <h3>Details</h3>
     <p>#03_1 2ch 30V/1Aリレー(1a+1a)</p>
     <p>通常開の機械式小電力用リレー2個。2個は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2303_1">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_30v_1a_relay_1a1a/#spec">SPEC Sheet</a></p>
 
     <p>#03_2 2ch 30V/1Aリレー(1c+1a)</p>
     <p>共通端子を備えた2個の機械式小電力用リレー。リレー1は通常閉、開の2端子あり。リレー2は通常開の1端子。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2303_2">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_30v_1a_relay_1c1a/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
