--- a/locales/ja/tp06.html
+++ b/locales/ja/tp06.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>機械式パワーリレー2個。2個は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2306">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_48v_16a_relay_1c1c/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
