--- a/locales/ja/tp07.html
+++ b/locales/ja/tp07.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>通常開のソリッドステート小電力用リレー2個。2個は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2307">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_solid_state_relay/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
