--- a/locales/ja/tp23.html
+++ b/locales/ja/tp23.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>絶縁PoE用電源。出力 5V/1.3A。35～60V入力の一般的な絶縁電源としても使用可能。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2323">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/poe_dcdc_converter_5v1_3a/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
