--- a/locales/ja/tp31.html
+++ b/locales/ja/tp31.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>汎用マイコン。Microchip社製PIC16F1824。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2331">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/pic_microcomputer/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
@@ -55,7 +55,7 @@
 
     <h3>Details</h3>
     <p>汎用マイコン。Microchip社製PIC16F1824。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2331">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/pic_microcomputer/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <dl class="message-properties">
