--- a/locales/ja/tp38.html
+++ b/locales/ja/tp38.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>プッシュボタン。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2338">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/button/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <dl class="message-properties">
