--- a/locales/ja/tp40.html
+++ b/locales/ja/tp40.html
@@ -4,19 +4,19 @@
     <h3>Details</h3>
     <p>#40_1 5kΩデジタルポテンショメータ(8bit)</p>
     <p>5kΩのデジタル可変抵抗。分解能8bit。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2340_1">Tibbit Blocks (#40_1)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/5k_digital_potentio_meter_8bit/#spec">SPEC Sheet</a></p>
 
     <p>#40_2 10kΩデジタルポテンショメータ(8bit)</p>
     <p>10kΩのデジタル可変抵抗。分解能8bit。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2340_2">Tibbit Blocks (#40_2)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/10k_digital_potentio_meter_8bit/#spec">SPEC Sheet</a></p>
 
     <p>#40_3 50kΩデジタルポテンショメータ(8bit)</p>
     <p>50kΩのデジタル可変抵抗。分解能8bit。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2340_3">Tibbit Blocks (#40_3)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/50k_digital_potentio_meter_8bit/#spec">SPEC Sheet</a></p>
 
     <p>#40_4 100kΩデジタルポテンショメータ(8bit)</p>
     <p>100kΩのデジタル可変抵抗。分解能8bit。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2340_4">Tibbit Blocks (#40_4)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/100k_digital_potentio_meter_8bit/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
