--- a/locales/ja/tp41.html
+++ b/locales/ja/tp41.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>シリアル・パラレル変換による8chポート。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2341">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/8ch_expander/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
