--- a/locales/ja/tp42.html
+++ b/locales/ja/tp42.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>バッテリと割り込み用出力を備えたリアルタイムクロックと不揮発性メモリ。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2342">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/real_timeclock/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
