--- a/locales/ja/tp52.html
+++ b/locales/ja/tp52.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>-10～+10V絶縁ADC。4ch、16bit分解能（有効分解能52bit以上）。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2352">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_analog_input_16bitadc/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
