--- a/locales/ja/tp53.html
+++ b/locales/ja/tp53.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>4～20mA DC電流信号用ADC。16bit分解能（有効分解能15bit）。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2353">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4_20ma_signal_converter_16bitadc/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
