--- a/locales/ja/tp54.html
+++ b/locales/ja/tp54.html
@@ -4,7 +4,7 @@
     <h3>Details</h3>
 
     <p>ドライ接点入力4ch。入力端子とグランドの間に外部接点を取り付ける。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2354">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_dry_contact_input/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
@@ -36,7 +36,7 @@
     <h3>Details</h3>
     
     <p>ドライ接点入力4ch。入力端子とグランドの間に外部接点を取り付ける。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2354">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_dry_contact_input/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <dl class="message-properties">
