--- a/locales/ja/tp57.html
+++ b/locales/ja/tp57.html
@@ -3,7 +3,7 @@
     
     <h3>Details</h3>
     <p>汎用FPGA。Lattice Semiconductor社製ICE5LP1K-SWG36ITR50。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2357">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/fpga_ice5lp1k_swg36itr50/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
