--- a/locales/ja/tp58.html
+++ b/locales/ja/tp58.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>24V NPNオープンコレクタ出力 2ch。電源・グランドからは絶縁。ch間は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2358">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_npn_open_collector_24v0_5a/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
