--- a/locales/ja/tp01.html
+++ b/locales/ja/tp01.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>TX、RX、RTS、およびCTSラインのみのシンプルなRS232レベル変換ブロック。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2301">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/rs232_transceiver/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
@@ -23,7 +23,7 @@
 
     <h3>Details</h3>
     <p>TX、RX、RTS、およびCTSラインのみのシンプルなRS232レベル変換ブロック。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2301">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/rs232_transceiver/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <dl class="message-properties">
