--- a/locales/ja/tp04.html
+++ b/locales/ja/tp04.html
@@ -5,35 +5,35 @@
 
     <p>#04_1 2ch独立フォトカプラ入力(5V用抵抗内蔵)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された入力端子2組。2組は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_1">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_photocoupler_5v/#spec">SPEC Sheet</a></p>
 
     <p>#04_2 3chフォトカプラ入力(5V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された入力端子3組。3組のマイナス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_2">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_5v_kc/#spec">SPEC Sheet</a></p>
 
     <p>#04_3 3chフォトカプラ入力(5V用抵抗内蔵AC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された入力端子3組。3組のプラス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_3">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_5v_ac/#spec">SPEC Sheet</a></p>
 
     <p>#04_4 4ch非絶縁フォトカプラ入力(5V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離された入力端子3組。3組のマイナス側は共通でグランド。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_4">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_photocoupler_5v_kc/#spec">SPEC Sheet</a></p>
 
     <p>#04_5 2ch独立フォトカプラ入力(24V用用抵抗内蔵)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された24V入力端子2組。2組は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_5">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_photocoupler_24v/#spec">SPEC Sheet</a></p>
 
     <p>#04_6 3chフォトカプラ入力(24V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された24V入力端子3組。3組のマイナス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_6">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_24v_kc/#spec">SPEC Sheet</a></p>
 
     <p>#04_7 3chフォトカプラ入力(24V用抵抗内蔵AC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された24V入力端子3組。3組のプラス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_7">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_24v_ac/#spec">SPEC Sheet</a></p>
 
     <p>#04_8 4ch非絶縁フォトカプラ入力(24V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離された24V入力端子3組。3組のマイナス側は共通でグランド。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_8">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_photocoupler_24v_kc/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
@@ -66,35 +66,35 @@
 
     <p>#04_1 2ch独立フォトカプラ入力(5V用抵抗内蔵)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された入力端子2組。2組は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_1">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_photocoupler_5v/#spec">SPEC Sheet</a></p>
 
     <p>#04_2 3chフォトカプラ入力(5V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された入力端子3組。3組のマイナス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_2">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_5v_kc/#spec">SPEC Sheet</a></p>
 
     <p>#04_3 3chフォトカプラ入力(5V用抵抗内蔵AC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された入力端子3組。3組のプラス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_3">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_5v_ac/#spec">SPEC Sheet</a></p>
 
     <p>#04_4 4ch非絶縁フォトカプラ入力(5V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離された入力端子3組。3組のマイナス側は共通でグランド。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_4">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_photocoupler_5v_kc/#spec">SPEC Sheet</a></p>
 
     <p>#04_5 2ch独立フォトカプラ入力(24V用用抵抗内蔵)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された24V入力端子2組。2組は独立。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_5">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/2ch_photocoupler_24v/#spec">SPEC Sheet</a></p>
 
     <p>#04_6 3chフォトカプラ入力(24V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された24V入力端子3組。3組のマイナス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_6">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_24v_kc/#spec">SPEC Sheet</a></p>
 
     <p>#04_7 3chフォトカプラ入力(24V用抵抗内蔵AC)</p>
     <p>フォトカプラで分離（電源・グランドからは絶縁）された24V入力端子3組。3組のプラス側は共通。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_7">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_photocoupler_24v_ac/#spec">SPEC Sheet</a></p>
 
     <p>#04_8 4ch非絶縁フォトカプラ入力(24V用抵抗内蔵KC)</p>
     <p>フォトカプラで分離された24V入力端子3組。3組のマイナス側は共通でグランド。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2304_8">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_photocoupler_24v_kc/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <dl class="message-properties">
