--- a/locales/ja/tp05.html
+++ b/locales/ja/tp05.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>半二重RS485レベル変換ブロック。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2305">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/rs485_transceiver/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
@@ -28,7 +28,7 @@
 
     <h3>Details</h3>
     <p>半二重RS485レベル変換ブロック。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2305">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/rs485_transceiver/#spec">SPEC Sheet</a></p>
 
     <h3>Outputs</h3>
     <dl class="message-properties">
