--- a/locales/ja/tp10.html
+++ b/locales/ja/tp10.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>中電力出力(5V/1.1A)の非絶縁電源。9～18V入力。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2310">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/dcdc_converter_9_18v_5v1_1a/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
