--- a/locales/ja/tp11.html
+++ b/locales/ja/tp11.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>オープンコレクタ出力4ch。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2311">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_open_collector_output/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
