--- a/locales/ja/tp12.html
+++ b/locales/ja/tp12.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>高電圧出力(±15V/15mA)の非絶縁電源。5V入力。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2312">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/dcdc_converter_5v_15v_15ma/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
