--- a/locales/ja/tp14.html
+++ b/locales/ja/tp14.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>4chのDAC。-10V～+10V出力、分解能12bit。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2314">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/4ch_analog_output_12bit_dac/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
