--- a/locales/ja/tp15.html
+++ b/locales/ja/tp15.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>高電圧AC用ソリッドステートリレー。通常開。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2315">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/ac_solid_state_relay_ac260v1a/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
