--- a/locales/ja/tp17.html
+++ b/locales/ja/tp17.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>3chのPWM。電力は外部から供給必要。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2317">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3ch_pwm_output_power_external_supply/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
