--- a/locales/ja/tp22.html
+++ b/locales/ja/tp22.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>白金測温抵抗体温度計。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2322">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/temperature_converter_2_4/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
