--- a/locales/ja/tp25.html
+++ b/locales/ja/tp25.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>大電力出力(5V/1.5A)の非絶縁電源。8～60V入力。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2325">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/dcdc_converter_8_60v_5v1_5a_max/#spec">SPEC Sheet</a></p>
     
     <h3>Inputs</h3>
     <dl class="message-properties">
