--- a/locales/ja/tp26.html
+++ b/locales/ja/tp26.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>赤外線リモコンの赤外線コードを記録、再生。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2326">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/remote_control_decoder/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
