--- a/locales/ja/tp28.html
+++ b/locales/ja/tp28.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>可視スペクトル光センサ。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2328">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/illuminance_sensor/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
