--- a/locales/ja/tp36.html
+++ b/locales/ja/tp36.html
@@ -3,7 +3,7 @@
 
     <h3>Details</h3>
     <p>3軸加速度センサ（衝撃センサ）。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2336">Tibbit Blocks</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/3_accelerometer/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
