--- a/locales/ja/tp39.html
+++ b/locales/ja/tp39.html
@@ -4,19 +4,19 @@
     <h3>Details</h3>
     <p>#39_1 緑色LED(低輝度)</p>
     <p>低輝度の緑色LED。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2339_1">Tibbit Blocks (#39_1)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/large_green_led/#spec">SPEC Sheet</a></p>
 
     <p>#39_2 赤色LED(高輝度)</p>
     <p>高輝度の赤色LED。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2339_2">Tibbit Blocks (#39_2)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/large_red_led/#spec">SPEC Sheet</a></p>
 
     <p>#39_3 黄色LED(低輝度)</p>
     <p>低輝度の黄色LED。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2339_3">Tibbit Blocks (#39_3)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/large_yellow_led/#spec">SPEC Sheet</a></p>
 
     <p>#39_4 青色LED(高輝度)</p>
     <p>高輝度の青色LED。</p>
-    <p>参照：<a href="http://tibbo.com/store/tps/tibbits.html#?filter=%2339_4">Tibbit Blocks (#39_4)</a></p>
+    <p>参照：<a href="https://tibbo-pi.co-works.co.jp/item/tibbit_block/large_blue_led/#spec">SPEC Sheet</a></p>
 
     <h3>Inputs</h3>
     <dl class="message-properties">
