ver1.2.0 ・ボードF/W update機能追加 ・Groveセンサ制御用のノード追加   - RGBバックライト液晶モジュール   - I2C タッチセンサ   - Grove:ジェスチャー   - I2C カラーセンサ ・I2C動作安定化 ・#22動作安定化 ・#16動作安定化 ・その他細かい修正

--- a/locales/ja/tp14.html
+++ b/locales/ja/tp14.html
@@ -1,5 +1,5 @@
 <script type="text/x-red" data-help-name="Tibbit-#14 out">
-    <p>#14 4chアナログ入力(12bitDAC)</p>
+    <p>#14 4chアナログ出力(12bitDAC)</p>
 
     <h3>Details</h3>
     <p>4chのDAC。-10V～+10V出力、分解能12bit。</p>
