--- a/locales/ja/tpcBuzzer.html
+++ b/locales/ja/tpcBuzzer.html
@@ -12,7 +12,18 @@
         <dd>
             <p><code>ptn</code>: パターン1~6(0の場合はブザーを止める)</p>
             <p><code>time</code>: 鳴らす時間(ミリ秒、0の場合は無制限)</p>
-            
+
+            <p>
+            パターンについて<br>
+            0 : 停止<br>
+            1 : 常にOn<br>
+            2 : 1秒On, 1秒Off<br>
+            3 : 0.5秒On, 0.5秒Off<br>
+            4 : 0.2秒On, 0.2秒Off<br>
+            5 : 0.1秒On, 0.1秒Off<br>
+            6 : 0.1秒On, 0.9秒Off
+            </p>
+
             <p>e.g.</p>
             <ul>
                 <li>
