--- a/tp02.html
+++ b/tp02.html
@@ -38,9 +38,6 @@
             }
 
         }
-
-        console.log(this.moreDefaults);
-
     }
 </script>
 
@@ -222,7 +219,7 @@
     </div>
 
     <div class="form-row">
-        <label for="node-input-_kind"><i class="icon-tag"></i> <span data-i18n="tp02.label.mode"></span></label>
+        <label for="node-input-_mode"><i class="icon-tag"></i> <span data-i18n="tp02.label.mode"></span></label>
         <select style="width: 100px" id="node-input-_mode">
             <option value="RS232" >RS232</option>
             <option value="RS422" >RS422</option>
